[package]
name = "stories-on-board"
version = "0.1.0"
authors = ["A57 <product@atlantic57.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
log = "0.4.1"
hyper = "0.11"
futures = "0.1"
tokio-core = "0.1"